fixed spacing in header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,13 @@
 .header {
   border-bottom: 2px solid #000000;
   background-color: #ffffff;
+  padding: 0 1rem;
 }
 
 .navBar {
   flex-direction: row !important;
   width: 45%;
-  justify-content: space-evenly;
+  justify-content: flex-end;
 }
 
 .actionLink {
